--- a/tools/pythonpkg/CMakeLists.txt
+++ b/tools/pythonpkg/CMakeLists.txt
@@ -2,18 +2,13 @@ include_directories(src)
 include_directories(../../)
 include_directories(src/include)
 
-find_package(PythonLibs)
-if(NOT PythonLibs_FOUND)
-  return()
-endif()
+# Try to import all Python components potentially needed by nanobind
+find_package(Python 3.8
+  REQUIRED COMPONENTS Interpreter Development.Module
+  OPTIONAL_COMPONENTS Development.SABIModule)
 
-find_package(pybind11)
-if(NOT pybind11_FOUND)
-  return()
-endif()
-
-include_directories(${pybind11_INCLUDE_DIR})
-include_directories(${PYTHON_INCLUDE_DIRS})
+# Import nanobind through CMake's find_package mechanism
+find_package(nanobind CONFIG REQUIRED)
 
 add_subdirectory(src)
 # this is used for clang-tidy checks
