--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -1,15 +1,6 @@
 [build-system]
-requires = [
-	"setuptools>=60",
-	"setuptools_scm>=6.4",
-	"pybind11>=2.6.0",
-	"wheel>=0.38.0"
-]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools_scm]
-root = "../.."
-local_scheme = "no-local-version"
+requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
+build-backend = "scikit_build_core.build"
 
 ### CI Builwheel configurations ###
 
