--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -2,7 +2,19 @@
 requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
 build-backend = "scikit_build_core.build"
 
-### CI Builwheel configurations ###
+[tool.scikit-build]
+# Protect the configuration against future changes in scikit-build-core
+minimum-version = "0.4"
+
+# Setuptools-style build caching in a local directory
+build-dir = "build"
+
+cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
+
+# Build stable ABI wheels for CPython 3.12+
+wheel.py-api = "cp312"
+
+### CI Buildwheel configurations ###
 
 # Default config runs all tests and requires at least one extension to be tested against
 [tool.cibuildwheel]
