--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -2,6 +2,22 @@
 requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
 build-backend = "scikit_build_core.build"
 
+[project]
+name = "duckdb"
+description='DuckDB in-process database'
+keywords=['DuckDB', 'Database', 'SQL', 'OLAP']
+requires-python = ">=3.8"
+readme = "README.md"
+license= {text = "MIT"}
+maintainers = [{name = "Hannes Muehleisen", email="hannes@cwi.nl"}]
+classifiers = [
+        'Topic :: Database :: Database Engines/Servers',
+        'Intended Audience :: Developers',
+        'License :: OSI Approved :: MIT License'
+        ]
+dependencies = []
+version = "1.0.0"
+
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
 minimum-version = "0.4"
