--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -1,18 +1,15 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
-build-backend = "scikit_build_core.build"
+requires = [
+        "setuptools>=60",
+        "setuptools_scm>=6.4",
+        "nanobind>=2.0.0",
+        "wheel>=0.38.0"
+]
+build-backend = "setuptools.build_meta"
 
-[tool.scikit-build]
-# Protect the configuration against future changes in scikit-build-core
-minimum-version = "0.4"
-
-# Setuptools-style build caching in a local directory
-build-dir = "build"
-
-cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
-
-# Build stable ABI wheels for CPython 3.12+
-wheel.py-api = "cp312"
+[tool.setuptools_scm]
+root = "../.."
+local_scheme = "no-local-version"
 
 ### CI Buildwheel configurations ###
 
