--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
 requires = [
-	"setuptools>=60",
-	"setuptools_scm>=6.4",
-	"pybind11>=2.6.0",
-	"wheel>=0.38.0"
+    "setuptools>=60",
+    "setuptools_scm>=6.4",
+    "nanobind>=2.0.0",
+    "wheel>=0.38.0",
 ]
 build-backend = "setuptools.build_meta"
 
