--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=60",
     "setuptools_scm>=6.4",
-    "nanobind>=2.0.0",
+    "nanobind @ git+https://github.com/wjakob/nanobind.git@master",
     "wheel>=0.38.0",
 ]
 build-backend = "setuptools.build_meta"
